@@ -82,11 +82,6 @@ v3.1 Tentative Plan
 
          http://dev.mysql.com/doc/refman/5.0/en/identifiers.html
 
-    o Define custom template for sql_double et al., with the comparison
-      precision being the parameter:
-
-        http://lists.mysql.com/plusplus/3984
-
     o Define operator<< for Fields, Row, StoreQueryResult, etc.  In other
       words, there should be a way to get a user-readable version of
       received data without a lot of code.  CSV format by default, and
